--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
   <body oncontextmenu="return false">
     <!-- navbar starts -->
     <header>
-      <a href="/" class="logo"><i class="fab fa-node-js"></i> Lucas</a>
+      <a href="/" class="logo"><i class="fab fa-node-js"></i> Ivan</a>
 
       <div id="menu" class="fas fa-bars"></div>
       <nav class="navbar">
@@ -68,7 +68,7 @@
     <section class="footer">
       <div class="box-container">
         <div class="box">
-          <h3>Lucas's Portfolio</h3>
+          <h3>Ivan's Portfolio</h3>
           <p>
             Thank you for visiting my personal portfolio website. Connect with
             me over socials. <br />
@@ -97,8 +97,8 @@
 
         <div class="box">
           <h3>contact info</h3>
-          <p><i class="fas fa-envelope"></i>yooyooo1004@gmail.com</p>
-          <p><i class="fas fa-map-marked-alt"></i>Kingston, Canada</p>
+          <p><i class="fas fa-envelope"></i>cheremk77@gmail.com</p>
+          <p><i class="fas fa-map-marked-alt"></i>Ozera, Ukraine</p>
           <div class="share">
             <a
               href="https://github.com/dream528"
@@ -106,7 +106,7 @@
               target="_blank"
             ></a>
             <a
-              href="mailto:yooyooo1004@gmail.com"
+              href="mailto:cheremk77@gmail.com"
               class="fas fa-envelope"
               target="_blank"
             ></a>
