--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
               <p><span> place : </span> Ozera, Ukraine</p>
             </div>
         </div>
+        <div class="resumebtn">
+            <a href="./assets/Resume.pdf" target="_blank" class="btn"><span>Resume</span>
+                <i class="fas fa-chevron-right"></i>
+            </a>
+        </div>
         
 
     </div>
